# sfpets

./: .env.default  .gitignore  CNAME  Dockerfile  README.md  asset-manifest.json  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json
assets/: index-69efb525.js  index-a93034ba.js  index-d183d51f.js  index-f4da5957.css
client/: .env.default  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
client/public/: CNAME  index.html
client/src/: App.tsx  HomePage.tsx  env.d.ts  queries.ts
public/: index.html
server/: .dockerignore  .gitignore  Dockerfile  Program.cs  appsettings.json  entrypoint_docker.sh  pyproject.toml  server.csproj
server/Controllers/: UsersController.cs
server/Migrations/: 20221015231718_AddLookupTables.Designer.cs  20221015231718_AddLookupTables.cs  20221016184450_init.Designer.cs  20221016184450_init.cs  DBContextModelSnapshot.cs
server/Models/: User.cs
server/Properties/: launchSettings.json
server/Server/: DBContext.cs
server/pets_api/: manage.py  ¨
server/pets_api/api/: admin.py  models.py  serializers.py  urls.py  views.py
server/pets_api/api/migrations/: 0001_initial.py  0002_remove_user_username.py  0003_user_username_alter_user_email.py  0004_remove_user_username_alter_user_email.py  0005_alter_user_managers.py  0006_alter_character_user.py
server/pets_api/pets_api/: asgi.py  settings.py  urls.py  wsgi.py
src/: App.tsx  HomePage.tsx  LangContext.ts  data.json  index.tsx
src/components/: Help.tsx  LangSelect.tsx  Pet.tsx  PetCard.tsx  (+2 more)
templates/: default.conf.template
(+142 files in other folders)
