[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Yachim <jachym.kohout@gmail.com>"]
license = "gplv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.0"
psycopg2 = "^2.9.5"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
